[project]
name = "circuit-tracer"
version = "0.1.0"
description = "Library for circuit tracing in language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "huggingface_hub>=0.26.0",
    "ipykernel>=6.29.5",
    "numpy>=2.0.0",
    "pip>=25.1.1",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pywinpty>=2.0.15",
    "safetensors>=0.5.0",
    "tokenizers>=0.21.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.60.0",
    "transformer-lens>=v2.15.4",
    "transformers>=4.50.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.scripts]
circuit-tracer = "circuit_tracer.__main__:main"


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
